# Copyright 2026 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# go/keep-sorted start
bazel_dep(name = "boringssl")
bazel_dep(name = "confidential-federated-compute")
bazel_dep(name = "federated-compute", repo_name = "federated_compute")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983")
bazel_dep(name = "oak")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_rust_bindgen", version = "0.70.0")
bazel_dep(name = "rules_rust_prost")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.70.0", repo_name = None)
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
# go/keep-sorted end

fcp_deps = use_extension("@federated_compute//fcp:extensions.bzl", "fcp_deps")
use_repo(fcp_deps, "bazel_toolchains")

# Module overrides.
# go/keep-sorted start block=yes newline_separated=yes ignore_prefixes=archive_override,single_version_override
single_version_override(
    module_name = "abseil-cpp",
    # 20260526.0 requires bazel 8.6.0 or later so that compatibility_level is
    # ignored. But we can't use bazel >= 8.5 because of
    # https://github.com/bazelbuild/bazel/issues/28286.
    version = "20260107.1",
)

archive_override(
    module_name = "boringssl",
    integrity = "sha256-UuLZZ1nUg+OE45ZKJRN4HqBctrLWd/H49aQEmuowU10=",
    patches = ["//third_party/boringssl:rust.patch"],
    strip_prefix = "boringssl-0.20260211.0",
    urls = ["https://github.com/google/boringssl/releases/download/0.20260211.0/boringssl-0.20260211.0.tar.gz"],
)

archive_override(
    module_name = "confidential-federated-compute",
    integrity = "sha256-l9x8vVCE5FUQSksyiN7OzEw8OTrSKhZQOBIcxsLWtPI=",
    strip_prefix = "confidential-federated-compute-364cb6cbb686452b88d209c84a7cfd056d0a6181",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/archive/364cb6cbb686452b88d209c84a7cfd056d0a6181.tar.gz"],
)

archive_override(
    module_name = "federated-compute",
    integrity = "sha256-2ew2yLeB312CVvNX9uZOwsF4qozEc/dUumjhYj5nGTk=",
    strip_prefix = "federated-compute-49422d8dcb8e9d23459b4a406716790e4a7ead2d",
    urls = ["https://github.com/google-parfait/federated-compute/archive/49422d8dcb8e9d23459b4a406716790e4a7ead2d.tar.gz"],
)

archive_override(
    module_name = "oak",
    integrity = "sha256-oDxVrBtisUvlyMza94c+QCOgi0AqSca18mNqCyiBxDY=",
    patches = [
        "//third_party/oak:module.patch",
        "//third_party/oak:oak_attestation_verification.patch",
        "//third_party/oak:oak_restricted_kernel_sdk.patch",
        "//third_party/oak:session_binder.patch",
        "//third_party/oak:tr_c2sp.patch",
    ],
    strip_prefix = "oak-e72bbdbf0342f7a13373bc26d14135fcc37f0410",
    urls = ["https://github.com/project-oak/oak/archive/e72bbdbf0342f7a13373bc26d14135fcc37f0410.tar.gz"],
)

archive_override(
    module_name = "rules_rust_prost",
    integrity = "sha256-X/2f8fby8U8gV7fLqpGl5qzZpMve1ayB2tm+s2hZYB4=",
    patches = ["//third_party/rules_rust:prost_deps.patch"],
    strip_prefix = "extensions/prost",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.70.0/rules_rust-0.70.0.tar.gz"],
)
# go/keep-sorted end

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Dependencies that do not use bzlmod yet.
# go/keep-sorted start block=yes newline_separated=yes ignore_prefixes=http_archive
http_archive(
    name = "raft_rs",
    patches = ["@trusted_computations_platform//third_party/raft_rs:bazel.patch"],
    sha256 = "e755de7613e7105c3bf90fb7742887cce7c7276723f16a9d1fe7c6053bd91973",
    strip_prefix = "raft-rs-10968a112dcc4143ad19a1b35b6dca6e30d2e439",
    url = "https://github.com/google-parfait/raft-rs/archive/10968a112dcc4143ad19a1b35b6dca6e30d2e439.tar.gz",
)

http_archive(
    name = "sysroot",
    # Build provenance available at https://search.sigstore.dev/?hash=<sha256>.
    # To make this lookup easier, we use `sha256` instead of `integrity`.
    sha256 = "86ccf9ea2360237ecad01633a86d566ed16e137daf986320ef91ec295ea5f679",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20260311/sysroot.tar.xz",
)

http_archive(
    name = "trusted_computations_platform",
    integrity = "sha256-CdNN7zYRk2Jn4gcQSf/Zmtd0VGb2Z5goS0Saj+eztng=",
    strip_prefix = "trusted-computations-platform-ae07ab331d468c72844a8347adc13a8b500e8347",
    url = "https://github.com/google-parfait/trusted-computations-platform/archive/ae07ab331d468c72844a8347adc13a8b500e8347.tar.gz",
)
# go/keep-sorted end

# Rust crates.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.annotation(
    crate = "bindgen-cli",
    gen_binaries = ["bindgen"],
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)
crate.spec(
    artifact = "bin",
    package = "bindgen-cli",
    version = "0.72.0",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.5.0",
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.5.0",
)
crate.from_specs(
    name = "crates",
    host_tools = "@rust_host_tools_nightly",
)
use_repo(crate, "crates")

aliased_crates_repository = use_extension("@oak//bazel/crates:extensions.bzl", "aliased_crates_repository")
use_repo(aliased_crates_repository, "oak_crates_index")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "14.0.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    edition = "2024",
    sha256s = {
        "2026-04-11/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "b4c95336c94a70b33f5b7b471315c8b4ab0a10c5c936554d73101d8e9dd76444",
        "2026-04-11/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "658854d7dd8c4ed312ed703768578fed74509775a6053f3552663f4074c8c03f",
        "2026-04-11/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "133a0d5c074964af93661ba86d1200b4363c16ab1cbcdb57d56818610a6d2ad7",
        "2026-04-11/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "e438f81cb8340e1093d7e799c6e742eb76779b360146d178b7104b4f7a89b3e1",
        "2026-04-11/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "6c32f2c2bf33b2d45a5f969f5d30c764f3c5c35179af65f7dae3448779bdfa89",
        "2026-04-11/rustfmt-nightly-x86_64-unknown-linux-gnu.tar.xz": "f64247b36ca1de77472e194027c1d28a0b8fe1fa27c7fd25dd0f8715ef051f7a",
    },
    version = "nightly/2026-04-11",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

register_toolchains(
    "//toolchains:bindgen_toolchain",
    "//toolchains:prost_toolchain",
    "@llvm_toolchain//:all",
)
