cargo-features = ["per-package-target"]

[package]
name = "ledger_enclave_app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
forced-target = "x86_64-unknown-none"

[dependencies]
federated_compute = { path = "../third_party/federated_compute" }
ledger_service = { path = "../ledger_service" }
log = "*"
micro_rpc = { workspace = true }
oak_channel = { workspace = true }
oak_core = { workspace = true }
oak_enclave_runtime_support = { workspace = true }
oak_restricted_kernel_api = { workspace = true }

[[bin]]
name = "ledger_enclave_app"
test = false
bench = false
