[package]
name = "ledger_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sha2 = { version = "*", default-features = false }
anyhow = { version = "*", default-features = false }
rand = { version = "*", default-features = false, features = ["getrandom"] }
cfc_crypto = { path = "../cfc_crypto" }
micro_rpc = { workspace = true }
federated_compute = { path = "../third_party/federated_compute" }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-types = { version = "*", default-features = false }
