[package]
name = "ledger_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "*", default-features = false }
cfc_crypto = { path = "../cfc_crypto" }
coset = { version = "*", default-features = false }
federated_compute = { path = "../third_party/federated_compute" }
micro_rpc = { workspace = true }
oak_proto_rust = { workspace = true }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-types = { version = "*", default-features = false }
rand = { version = "*", default-features = false, features = ["getrandom"] }
sha2 = { version = "*", default-features = false }

[dev-dependencies]
googletest = "*"
