[package]
name = "ledger_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
testing = ["oak_restricted_kernel_sdk/testing", "dep:oak_attestation"]

[dependencies]
anyhow = { version = "*", default-features = false }
cfc_crypto = { path = "../cfc_crypto" }
coset = { version = "*", default-features = false }
federated_compute = { path = "../third_party/federated_compute" }
hpke = { version = "*" }
micro_rpc = { workspace = true }
oak_attestation = { workspace = true, optional = true}
oak_attestation_verification = { workspace = true }
oak_proto_rust = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true }
p256 = { version = "*", default-features = false, features = ["ecdsa"] }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-types = { version = "*", default-features = false }
rand = { version = "*", default-features = false, features = ["getrandom"] }
sha2 = { version = "*", default-features = false }
slog = { version = "2.2", default-features = false }
tcp_runtime = { workspace = true }
tcp_proto = { workspace = true }

[dev-dependencies]
googletest = "*"
ledger_service = { path = ".", features = ["testing"] }
oak_attestation = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true, features = ["testing"] }
tcp_integration = { workspace = true }

[build-dependencies]
micro_rpc_build = { workspace = true }
