[package]
name = "pipeline_transforms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "*", default-features = false }
bitmask = { version = "*", default-features = false }
cfc_crypto = { path = "../cfc_crypto" }
micro_rpc = { workspace = true }
prost = { version = "*", default-features = false, features = ["prost-derive"] }

[build-dependencies]
micro_rpc_build = { workspace = true }
