[package]
name = "pipeline_transforms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "*", default-features = false }
bitmask = { version = "*", default-features = false }
cfc_crypto = { path = "../cfc_crypto" }
federated_compute = { path = "../third_party/federated_compute" }
