cargo-features = ["per-package-target"]

[package]
name = "replicated_ledger_enclave_app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
forced-target = "x86_64-unknown-none"

[dependencies]
federated_compute = { path = "../third_party/federated_compute" }
ledger_service = { path = "../ledger_service" }
oak_restricted_kernel_sdk = { workspace = true }

[[bin]]
name = "replicated_ledger_enclave_app"
test = false
bench = false
