# Copyright 2025 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "gcp",
    version = "0.0.1",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "intel_jwks",
    integrity = "sha256-nhu2sXdKJXzAhzE8rB4iBwxWuBJbqqUN/vzRbV1liOk=",
    urls = ["https://portal.trustauthority.intel.com/certs"],
)

http_file(
    name = "google_jwks",
    urls = ["https://www.googleapis.com/service_accounts/v1/metadata/jwk/signer@confidentialspace-sign.iam.gserviceaccount.com"],
)

bazel_dep(name = "abseil-cpp", version = "20250814.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.74.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "grpc-java", version = "1.75.0", repo_name = "io_grpc_grpc_java")
bazel_dep(name = "tink_cc", version = "2.4.0", repo_name = "com_google_tink")
bazel_dep(name = "nlohmann_json", version = "3.11.3")  # Needed for JSON parsing
bazel_dep(name = "rules_foreign_cc", version = "0.11.1")
bazel_dep(name = "curl", version = "8.11.0")  # Example version, check BCR
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "rules_cuda")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")

archive_override(
    module_name = "rules_cuda",
    integrity = "sha256-1p+wq8uTeO1ZELmj03RqR9cKwpuK+idfkTrF4ZehfBw=",
    strip_prefix = "rules_cuda-76cb0a6afbe814d4da3cc50b9117c64272db4c44",
    url = "https://github.com/bazel-contrib/rules_cuda/archive/76cb0a6afbe814d4da3cc50b9117c64272db4c44.tar.gz",
)

http_archive(
    name = "sysroot",
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    # clang version lower than 19.1.0 requires libtinfo.so.5 when building CUDA
    llvm_version = "19.1.0",
    stdlib = {"linux-x86_64": "stdc++"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12_base",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc_debian12_base", "distroless_cc_debian12_base_linux_amd64")

http_archive(
    name = "llama_cpp",
    build_file = "//third_party/llama_cpp:llama_cpp.BUILD.bzl",
    integrity = "sha256-tE6qqF3MiQbSWpTfUDYqTK4KndvvJ0R27udIde7/LE4=",
    strip_prefix = "llama.cpp-be48528b068111304e4a0bb82c028558b5705f05",
    url = "https://github.com/ggml-org/llama.cpp/archive/be48528b068111304e4a0bb82c028558b5705f05.tar.gz",
)

http_auth_file = use_repo_rule("//:repo_rules.bzl", "http_auth_file")

http_auth_file(
    name = "gemma_weights",
    downloaded_file_path = "gemma-3-270m-it-q4_k_m.gguf",
    # Gemma 3 270M Instruct, Q4_K_M (~253MB)
    urls = ["https://huggingface.co/second-state/gemma-3-270m-it-GGUF/resolve/main/gemma-3-270m-it-Q4_K_M.gguf?download=true"],
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")

# ------------------
# -- CUDA 12.2 -----
# ------------------

cuda.component(
    name = "cuda_cccl",
    component_name = "cccl",
    strip_prefix = "cuda_cccl-linux-x86_64-12.2.140-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cccl/linux-x86_64/cuda_cccl-linux-x86_64-12.2.140-archive.tar.xz"],
)
cuda.component(
    name = "cuda_cudart",
    component_name = "cudart",
    strip_prefix = "cuda_cudart-linux-x86_64-12.2.140-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cudart/linux-x86_64/cuda_cudart-linux-x86_64-12.2.140-archive.tar.xz"],
)
cuda.component(
    name = "cuda_nvcc",
    component_name = "nvcc",
    strip_prefix = "cuda_nvcc-linux-x86_64-12.2.140-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvcc/linux-x86_64/cuda_nvcc-linux-x86_64-12.2.140-archive.tar.xz"],
)
cuda.component(
    name = "cuda_cublas",
    component_name = "cublas",
    strip_prefix = "libcublas-linux-x86_64-12.2.5.6-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcublas/linux-x86_64/libcublas-linux-x86_64-12.2.5.6-archive.tar.xz"],
)
cuda.component(
    name = "cuda_curand",
    component_name = "curand",
    strip_prefix = "libcurand-linux-x86_64-10.3.3.141-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcurand/linux-x86_64/libcurand-linux-x86_64-10.3.3.141-archive.tar.xz"],
)
cuda.toolkit(
    name = "cuda",
    components_mapping = {
        "cccl": "@cuda_cccl",
        "cudart": "@cuda_cudart",
        "nvcc": "@cuda_nvcc",
        "cublas": "@cuda_cublas",
        "curand": "@cuda_curand",
    },
    version = "12.2.2",
)
use_repo(
    cuda,
    "cuda",
    "cuda_cccl",
    "cuda_cublas",
    "cuda_cudart",
    "cuda_curand",
    "cuda_nvcc",
)

http_archive(
    name = "nvidia_driver",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")
package(default_visibility = ["//visibility:public"])
cc_library(
    name = "cuda_libs",
    srcs = glob(["lib/libcuda.so*"]),
)
""",
    strip_prefix = "nvidia_driver-linux-x86_64-535.161.07-archive",
    # Corrected URL: compute/nvidia-driver/redist/...
    urls = ["https://developer.download.nvidia.com/compute/nvidia-driver/redist/nvidia_driver/linux-x86_64/nvidia_driver-linux-x86_64-535.161.07-archive.tar.xz"],
)

bazel_dep(name = "confidential-federated-compute", version = "0.0.12")
bazel_dep(name = "boringssl", version = "0.20250514.0")
