# Copyright 2025 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "gcp",
    version = "0.0.1",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "intel_jwks",
    sha256 = "4e1d55c79b698cde4987d791594495e70432879be621a1b6e42a9daafc84bee3",
    urls = ["https://portal.trustauthority.intel.com/certs"],
)

http_file(
    name = "google_jwks",
    urls = ["https://www.googleapis.com/service_accounts/v1/metadata/jwk/signer@confidentialspace-sign.iam.gserviceaccount.com"],
)

bazel_dep(name = "gemma", version = "0.0.1")
archive_override(
    module_name = "gemma",
    patches = ["//third_party/gemma:module.patch"],
    strip_prefix = "gemma.cpp-73f1140dca92b42a5a5cf620ad3b6d9c0c35155e",
    urls = ["https://github.com/google/gemma.cpp/archive/73f1140dca92b42a5a5cf620ad3b6d9c0c35155e.tar.gz"],
)

single_version_override(
    module_name = "rules_python",
    version = "1.5.4",
)

bazel_dep(name = "abseil-cpp", version = "20250814.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.5.4")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.78.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "tink_cc", version = "2.4.0", repo_name = "com_google_tink")
bazel_dep(name = "nlohmann_json", version = "3.11.3")  # Needed for JSON parsing
bazel_dep(name = "rules_foreign_cc", version = "0.11.1")
bazel_dep(name = "curl", version = "8.11.0")  # Example version, check BCR
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "rules_cuda")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983", repo_name = "com_google_googleapis")
bazel_dep(name = "rules_rust", version = "0.69.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.13")
python.toolchain(python_version = "3.13")
use_repo(python, "python_3_13")

register_toolchains("@python_3_13//:all")

archive_override(
    module_name = "rules_cuda",
    integrity = "sha256-1p+wq8uTeO1ZELmj03RqR9cKwpuK+idfkTrF4ZehfBw=",
    strip_prefix = "rules_cuda-76cb0a6afbe814d4da3cc50b9117c64272db4c44",
    url = "https://github.com/bazel-contrib/rules_cuda/archive/76cb0a6afbe814d4da3cc50b9117c64272db4c44.tar.gz",
)

http_archive(
    name = "sysroot",
    sha256 = "86ccf9ea2360237ecad01633a86d566ed16e137daf986320ef91ec295ea5f679",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20260311/sysroot.tar.xz",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    # clang version lower than 19.1.0 requires libtinfo.so.5 when building CUDA
    llvm_version = "19.1.0",
    stdlib = {"linux-x86_64": "stdc++"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12_base",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc_debian12_base", "distroless_cc_debian12_base_linux_amd64")

http_archive(
    name = "llama_cpp",
    build_file = "//third_party/llama_cpp:llama_cpp.BUILD.bzl",
    integrity = "sha256-tE6qqF3MiQbSWpTfUDYqTK4KndvvJ0R27udIde7/LE4=",
    strip_prefix = "llama.cpp-be48528b068111304e4a0bb82c028558b5705f05",
    url = "https://github.com/ggml-org/llama.cpp/archive/be48528b068111304e4a0bb82c028558b5705f05.tar.gz",
)

http_auth_file = use_repo_rule("//:repo_rules.bzl", "http_auth_file")

http_auth_file(
    name = "gemma_weights",
    downloaded_file_path = "gemma-3-270m-it-q4_k_m.gguf",
    # Gemma 3 270M Instruct, Q4_K_M (~253MB)
    urls = ["https://huggingface.co/second-state/gemma-3-270m-it-GGUF/resolve/main/gemma-3-270m-it-Q4_K_M.gguf?download=true"],
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")

# ------------------
# -- CUDA 12.2 -----
# ------------------

cuda.component(
    name = "cuda_cccl",
    component_name = "cccl",
    strip_prefix = "cuda_cccl-linux-x86_64-12.2.140-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cccl/linux-x86_64/cuda_cccl-linux-x86_64-12.2.140-archive.tar.xz"],
)
cuda.component(
    name = "cuda_cudart",
    component_name = "cudart",
    strip_prefix = "cuda_cudart-linux-x86_64-12.2.140-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cudart/linux-x86_64/cuda_cudart-linux-x86_64-12.2.140-archive.tar.xz"],
)
cuda.component(
    name = "cuda_nvcc",
    component_name = "nvcc",
    strip_prefix = "cuda_nvcc-linux-x86_64-12.2.140-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvcc/linux-x86_64/cuda_nvcc-linux-x86_64-12.2.140-archive.tar.xz"],
)
cuda.component(
    name = "cuda_cublas",
    component_name = "cublas",
    strip_prefix = "libcublas-linux-x86_64-12.2.5.6-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcublas/linux-x86_64/libcublas-linux-x86_64-12.2.5.6-archive.tar.xz"],
)
cuda.component(
    name = "cuda_curand",
    component_name = "curand",
    strip_prefix = "libcurand-linux-x86_64-10.3.3.141-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcurand/linux-x86_64/libcurand-linux-x86_64-10.3.3.141-archive.tar.xz"],
)
cuda.toolkit(
    name = "cuda",
    components_mapping = {
        "cccl": "@cuda_cccl",
        "cudart": "@cuda_cudart",
        "nvcc": "@cuda_nvcc",
        "cublas": "@cuda_cublas",
        "curand": "@cuda_curand",
    },
    version = "12.2.2",
)
use_repo(
    cuda,
    "cuda",
    "cuda_cccl",
    "cuda_cublas",
    "cuda_cudart",
    "cuda_curand",
    "cuda_nvcc",
)

http_archive(
    name = "nvidia_driver",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")
package(default_visibility = ["//visibility:public"])
cc_library(
    name = "cuda_libs",
    srcs = glob(["lib/libcuda.so*"]),
)
""",
    strip_prefix = "nvidia_driver-linux-x86_64-535.161.07-archive",
    # Corrected URL: compute/nvidia-driver/redist/...
    urls = ["https://developer.download.nvidia.com/compute/nvidia-driver/redist/nvidia_driver/linux-x86_64/nvidia_driver-linux-x86_64-535.161.07-archive.tar.xz"],
)

bazel_dep(name = "confidential-federated-compute")
archive_override(
    module_name = "confidential-federated-compute",
    integrity = "sha256-CFBIIYRjLuxP4DmfF1JWoV57pDMs9p4HiHXGw7LKGYA=",
    patches = [
        "//third_party/confidential-federated-compute:make_gemma_regular_dep_module.patch",
        "//third_party/confidential-federated-compute:make_gemma_regular_dep_extensions.patch",
    ],
    strip_prefix = "confidential-federated-compute-088060a64f0725cbde2200f6aaaaa6404916c83c",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/archive/088060a64f0725cbde2200f6aaaaa6404916c83c.zip"],
)

archive_override(
    module_name = "highway",
    integrity = "sha256-i9++XA+1SLKEUFqlL+OVtQFC79Spmd7SDWcqJo2OKNE=",
    strip_prefix = "highway-1d16731233de45a365b43867f27d0a5f73925300",
    urls = ["https://github.com/google/highway/archive/1d16731233de45a365b43867f27d0a5f73925300.tar.gz"],
)

bazel_dep(name = "oak")
archive_override(
    module_name = "oak",
    integrity = "sha256-WHDrpSMKtd1NdzCvT7odZKseG0qqnPNfWCiw0CkmHXY=",
    patches = ["//third_party/oak:module.patch"],
    strip_prefix = "oak-cb4ce74ed6e9e38f05def5af67207517fe4663a2",
    urls = ["https://github.com/project-oak/oak/archive/cb4ce74ed6e9e38f05def5af67207517fe4663a2.tar.gz"],
)

bazel_dep(name = "boringssl", version = "0.20260211.0")

# Rust crates.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate", dev_dependency = True)

# Re-specifying anyhow here to ensure 'crates' repo is non-empty if needed,
# although it's primarily used via 'oak_crates_index'.
crate.spec(
    package = "anyhow",
    version = "1.0",
)
crate.from_specs(name = "crates")
use_repo(crate, "crates", "oak_crates_index")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    sha256s = {
        "2025-03-01/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "9dfde3b932a240ed7adbef95f9d1437681137c6e0b71ad95b2579cada0623e26",
        "2025-03-01/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "f5cb5053fee14e60bac386caf37a3542f6ac34fd73076e9329e4aac2e6caf640",
        "2025-03-01/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "22ed657fa3092f172cda7ff2c68d560f03e312d0b0d643356d89f4254e858c92",
        "2025-03-01/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "bbfecef0f783ff9fde8485c3739ca71f549e44d9633e58ed5086cf7a09da3fd9",
        "2025-03-01/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "089b01d390bf42e40b2f1eb960033bba83b54c5b70c2d457e0a31ecb99e87f11",
    },
    versions = ["nightly/2025-03-01"],
)
